Added more test images and checked segmentation

--- a/corn_segmentation.ipynb
+++ b/corn_segmentation.ipynb
@@ -136,6 +136,11 @@
     "            Region properties for segment\n",
     "        img: np.array\n",
     "            Original image\n",
+    "    \n",
+    "    Returns:\n",
+    "    --------\n",
+    "    float\n",
+    "        distance form segment to center of img\n",
     "    \"\"\"\n",
     "    segment_center = np.array(segment.centroid)\n",
     "    img_center = np.array([img.shape[0] / 2, img.shape[1] / 2]) \n",
